fix estilo collapse property info

--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -19,7 +19,7 @@
 #module #collapseExample.collapse:not(.show) {
   display: block;
   /* height = lineheight * no of lines to display */
-  height: 4.5em;
+  height: 3em;
   overflow: hidden;
 }
 
